infrastructure/kubernetes/manifests/00-namespace-configmap.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: routex
  labels:
    app.kubernetes.io/name: routex
    environment: production
